amberbio app web site

--- a/app-public/index.html
+++ b/app-public/index.html
@@ -9,14 +9,38 @@
 <body>
 
 <div class="header">
-<a class="current-link header-link" href="/">Home</a>
-<a class="header-link" href="features">Features</a>
-<a class="header-link" href="manual">Manual</a>
-<a class="header-link" href="about">About</a>
-<a class="header-link" href="contact">Contact</a>
+<a class="current header" href="/">Home</a>
+<a class="header" href="features">Features</a>
+<a class="header" href="manual">Manual</a>
+<a class="header" href="about">About</a>
+<a class="header" href="contact">Contact</a>
 
 </div>
 
+<div class="main">
+
+The Amberbio app for analyzing biological data sets.
+
+Figure of heatmap.
+
+
+<h2>Data analysis using mobile devices</h2>
+
+<h2>Data sets</h2>
+
+<h2>Simple user interface</h2>
+
+
+<h2>Price</h2>
+
+<h2>Import and export</h2>
+
+
+
+<h2>Features</h2>
+
+
+</div>
 
 
 
