amberbio app web site

--- a/app-public/index.html
+++ b/app-public/index.html
@@ -9,9 +9,14 @@
 <body>
 
 <div class="header">
+
+<img src="heatmap-76@2x.png" alt="Amberbio app icon" width ="10%" />
+
 <a class="current header" href="/">Home</a>
 <a class="header" href="features">Features</a>
 <a class="header" href="manual">Manual</a>
+<a class="header" href="faq">FAQ</a>
+<a class="header" href="support">Support and feedback</a>
 <a class="header" href="about">About</a>
 <a class="header" href="contact">Contact</a>
 
@@ -21,35 +26,64 @@
 
 The Amberbio app for analyzing biological data sets.
 
-Figure of heatmap.
-
+Figure of iphone with app.
+Available n the app store.
 
 <h2>Data analysis using mobile devices</h2>
+<p>
+The Amberbio app keeps data sets and peforms calculations and visualization on the devices.
+This mobility it possible to look at the data at any time and place. The data can be visualized and analyzed in real time 
+during meetings.
+</p>
 
 <h2>Data sets</h2>
+<p>
+The data sets must consist of samples and molecules, and a measurment for each mlecule on each sample. Missing values are allowed.
+Many types of data fit this description. Examples of data sets are mRNA gene expression, protein abundances, microRNA abundance.
+Meaurement techniques include microarrays, sequencing, qPCR, mass spectrometry, and 2D gels.
+</p>
+
+<p>
+Even data sets of a non-biological origin can be used.
+</p>
 
 <h2>Simple user interface</h2>
-
+The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button 
+which provides some additional information if anything might be unclear.
 
 <h2>Price</h2>
+<p>
+The app is a paid app. The only payment takes place at time of download. 
+There are no adds in the app. The price is variable and can be checked at the App Store.
+</p>
+
+<h2>Privacy</h2>
+There is complete privacy. No data is stored or sent to a server. All analysis is local. No login is required.
 
 <h2>Import and export</h2>
+<p>
+New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such 
+as Icloud, Dropbox or Box. Result files can be exported through email or cloud storage providers.
+</p>
 
-
+<p>
+Projects can be exported to a file that can be used for backup and transfer to other devices.
+</p>
 
 <h2>Features</h2>
+<p>
+The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, linear regression, various visualizations, 2D and 3D principal component analysis, clustering, logarithm transformation, normalization, factor elimination 
+</p>
 
+<p>
+Figures can be customized, and colors can be chosen. Figures can be exported to pdf or png. Tables can be exported to txt files.
+</p>
+
+<p>
+A description of the features of the app can be found on <a href="features">Features</a>.
+</p>
 
 </div>
-
-
-
-
-
-
-
-
-
 
 
 
