--- a/app-public/index.html
+++ b/app-public/index.html
@@ -17,46 +17,34 @@
 
 <body>
 <header id="home" class="header">
-	<h1><a href="/">Nosy Bee</a></h1>
+	<img src="img/heatmap-76@2x.png" alt="Amberbio app icon" width ="1%" />
+	<h1><a href="/">Amberbio</a></h1>
 	<nav class="header-nav">
-		<a href="#services">Services</a>
-		<a href="#demo">Demo</a>
-		<a href="#features">Features</a>
-		<a href="#references">References</a>
+		<a href="#description">Description</a>
+		<a href="/manual">Manual</a>
+		<a href="#support">Support</a>
+		<a href="#feedback">Feedback</a>
+		<a href="#consulting">Consulting</a>
 		<a href="#about">About us</a>
 		<a href="#contact">Contact</a>
-		<a href="/sv">Swedish</a>
 	</nav>
 </header>
 
-
-
-
-
-
-
-<body>
-
-<div class="header">
-
-<img src="images/heatmap-76@2x.png" alt="Amberbio app icon" width ="10%" />
-
-<a class="current header" href="index.html">Home</a>
-<a class="header" href="features.html">Features</a>
-<a class="header" href="manual.html">Manual</a>
-<a class="header" href="faq.html">FAQ</a>
-<a class="header" href="support.html">Support and feedback</a>
-<a class="header" href="about.html">About</a>
-<a class="header" href="contacti.html">Contact</a>
-
-</div>
-
-<div class="main">
-
-The Amberbio app for analyzing biological data sets.
-
+<article>
+	<section>
+		<h1>The Amberbio app for analyzing and visualizing biological data sets</h1>
 Figure of iphone with app.
 Available n the app store.
+	</section>
+
+	<section>
+		<h1>Price</h1>
+		<p class="tagline">The app is a paid app without in-app purchases or adds. The price is subject to change. The current price is approximately with small country to country variations.</p>
+	</section>
+
+	<section>
+		<h1>Description</h1>
+		<p class="tagline">
 
 <h2>Data analysis using mobile devices</h2>
 <p>
@@ -80,14 +68,19 @@ Even data sets of a non-biological origin can be used.
 The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button 
 which provides some additional information if anything might be unclear.
 
-<h2>Price</h2>
-<p>
-The app is a paid app. The only payment takes place at time of download. 
-There are no adds in the app. The price is variable and can be checked at the App Store.
 </p>
+	</section>
 
-<h2>Privacy</h2>
-There is complete privacy. No data is stored or sent to a server. All analysis is local. No login is required.
+	<section>
+		<h1>Privacy</h1>
+		<p class="tagline">The Amberbio app respects user privacy.</p>  
+		<p class="tagline">No data is sent to  server.</p>
+		<p class="tagline">All analysis is performed locally on the device.</p>
+		<p class="tagline">There are no user names and logins.</p>
+	</section>
+
+
+
 
 <h2>Import and export</h2>
 <p>
@@ -101,7 +94,7 @@ Projects can be exported to a file that can be used for backup and transfer to o
 
 <h2>Features</h2>
 <p>
-The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, linear regression, various visualizations, 2D and 3D principal component analysis, clustering, logarithm transformation, normalization, factor elimination, factor association tables, produce missing value plots among others.
+The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, linear regression, various visualizations, 2D and 3D principal component analysis, hierrchical clustering, heatmaps, logarithm transformation, normalization, factor elimination, factor association tables, produce missing value plots among others.
 </p>
 
 <p>
@@ -116,37 +109,7 @@ A description of the features of the app can be found on <a href="features">Feat
 
 
 
-</body>
-</html>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<article>
-	<section>
-		<h1>Nosy Bee provides web surveys, statistical analysis and result reports.</h1>
-		<p class="tagline">Let us take care of your market research project from questionnaire to report, or hire us for select parts.</p>
-		<p class="tagline">Our in-house developed software makes us flexible to handle all types of projects.</p>
-		<p class="tagline">We put great emphasis on quality and have many years of experience from web develpment, statistics and market research.</p>
-	</section>
 	<section class="services" id="services">
 		<h1>Our services</h1>
 		<div class="service">
