--- a/app-public/index.html
+++ b/app-public/index.html
@@ -21,6 +21,7 @@
 	<h1><a href="/">Amberbio</a></h1>
 	<nav class="header-nav">
 		<a href="#description">Description</a>
+		<a href="/screen-shoots">Screen shots</a>
 		<a href="/manual">Manual</a>
 		<a href="#support">Support</a>
 		<a href="#feedback">Feedback</a>
@@ -69,19 +70,6 @@ The user interface is mostly touch based and is very easy to use. No training is
 which provides some additional information if anything might be unclear.
 
 </p>
-	</section>
-
-	<section>
-		<h1>Privacy</h1>
-		<p class="tagline">The Amberbio app respects user privacy.</p>  
-		<p class="tagline">No data is sent to  server.</p>
-		<p class="tagline">All analysis is performed locally on the device.</p>
-		<p class="tagline">There are no user names and logins.</p>
-	</section>
-
-
-
-
 <h2>Import and export</h2>
 <p>
 New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such 
@@ -106,6 +94,89 @@ A description of the features of the app can be found on <a href="features">Feat
 </p>
 
 </div>
+	</section>
+
+	<section>
+		<h1>Privacy</h1>
+		<p class="tagline">The Amberbio app respects user privacy.</p>  
+		<p class="tagline">No data is sent to  server.</p>
+		<p class="tagline">All analysis is performed locally on the device.</p>
+		<p class="tagline">There are no user names and logins.</p>
+	</section>
+
+
+
+
+
+
+
+	<section id="about" class="columns">
+		<h1>About us</h1>
+		<p>Amberbio is owned by Amber Biosciences AB from Lund, Sweden.</p>
+		<div>
+			<h2>What we do</h2>
+			<div>
+				We have developed our own web survey software. We can customize surveys to any need.<br><br>Feel free to contact us to discuss your needs.
+			</div>
+		</div>
+		<div>
+			<h2>Who we are</h2>
+			<div>
+				Nosy Bee has been invented and developed by Morten Krogh and Elias Moberger.<br><br>We have a background in programming, bioinformatics, physics, mathematics and statistics.
+			</div>
+		</div>
+		<div>
+			<h2>How we work</h2>
+			<div>
+				We write simple code and minimize our dependence on third party code. Our preferred technologies include Javascript, Node.js, C, Nginx, HTML5, CSS3.<br><br>
+				We create functional and clean user interfaces.
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
+
+
+
+	<section id="contact" class="columns">
+		<h1>Contact</h1>
+		<div>
+			<p>Amber Biosciences AB</p>
+			<p>Skrivarevägen 9<br>
+			226 57 Lund<br>
+			Sweden</p>
+			<p>Org. no.: 556755-7763</p>
+			<p><a href="mailto:info@nosybee.com">info@amberbio.com</a></p>
+		</div>
+		<div>
+		    <img src="img/morten.jpg">
+			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
+			CEO, Bioinformatician, Developer<br>
+			<a href="mailto:morten.krogh@nosybee.com">morten.krogh@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 43</p>
+		</div>
+		<div>
+		    <img src="img/elias.jpg">
+			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
+			Project Manager, Developer<br>
+			<a href="mailto:elias.moberger@nosybee.com">elias.moberger@amberbio.com</a><br>
+			+46 (0) 704 - 68 06 46</p>
+		</div>
+		<div>
+		    <img src="/img/ann-sofie.jpg">
+			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
+			Bioinformatician<br>
+			<a href="mailto:ann-sofie.albrekt@amberbio.com">ann-sofie.albrekt@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 42</p>
+		</div>
+	</section>
+
+
+
 
 
 
@@ -199,53 +270,10 @@ A description of the features of the app can be found on <a href="features">Feat
 		    <a href="http://www.edlingresearch.se"><img src="http://www.edlingresearch.se/img/logo.png" style="width: 100%; max-width: 350px; max-height: 49px"></a>
 		</div>
 	</section>
-	<section id="about" class="columns">
-		<h1>About us</h1>
-		<p>Nosy Bee is situated in Lund, Sweden.
-		<div>
-			<h2>What we do</h2>
-			<div>
-				We have developed our own web survey software. We can customize surveys to any need.<br><br>Feel free to contact us to discuss your needs.
-			</div>
-		</div>
-		<div>
-			<h2>Who we are</h2>
-			<div>
-				Nosy Bee has been invented and developed by Morten Krogh and Elias Moberger.<br><br>We have a background in programming, bioinformatics, physics, mathematics and statistics.
-			</div>
-		</div>
-		<div>
-			<h2>How we work</h2>
-			<div>
-				We write simple code and minimize our dependence on third party code. Our preferred technologies include Javascript, Node.js, C, Nginx, HTML5, CSS3.<br><br>
-				We create functional and clean user interfaces.
-			</div>
-		</div>
-	</section>
-	<section id="contact" class="columns">
-		<h1>Contact</h1>
-		<div>
-		    <img src="/img/morten.jpg">
-			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
-			CEO, Analyst<br>
-			<a href="mailto:morten.krogh@nosybee.com">morten.krogh@nosybee.com</a><br>
-			+46 (0) 761 - 88 01 43</p>
-		</div>
-		<div>
-		    <img src="/img/elias.jpg">
-			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
-			Project Manager, Developer
-			<a href="mailto:elias.moberger@nosybee.com">elias.moberger@nosybee.com</a><br>
-			+46 (0) 704 - 68 06 46</p>
-		</div>
-		<div>
-			<p>Nosy Bee is owned by Amber Biosciences AB</p>
-			<p>Skrivarevägen 9<br>
-			226 57 Lund<br>
-			Sweden</p>
-			<p>Org. no.: 556755-7763</p>
-		</div>
-	</section>
+
+
+
+
 </article>
 </body>
 </html>
