--- a/app-public/index.html
+++ b/app-public/index.html
@@ -40,7 +40,8 @@ Available n the app store.
 
 	<section>
 		<h1>Price</h1>
-		<p class="tagline">The app is a paid app without in-app purchases or adds. The price is subject to change. The current price is approximately with small country to country variations.</p>
+		<p class="tagline">The app is a paid app with no extra costs. Future updates are free. The app can be installed on all devices with the same Apple id.</p>
+		<p class="tagline">The price is subject to change. The current price is approximately with small country to country variations.</p>
 	</section>
 
 	<section>
@@ -142,9 +143,9 @@ A description of the features of the app can be found on <a href="features">Feat
 
 
 
-	<section id="contact" class="columns">
+	<section id="contact">
 		<h1>Contact</h1>
-		<div>
+		<div class="address">
 			<p>Amber Biosciences AB</p>
 			<p>Skrivarevägen 9<br>
 			226 57 Lund<br>
@@ -152,6 +153,7 @@ A description of the features of the app can be found on <a href="features">Feat
 			<p>Org. no.: 556755-7763</p>
 			<p><a href="mailto:info@nosybee.com">info@amberbio.com</a></p>
 		</div>
+		<div class="columns">
 		<div>
 		    <img src="img/morten.jpg">
 			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
@@ -167,11 +169,12 @@ A description of the features of the app can be found on <a href="features">Feat
 			+46 (0) 704 - 68 06 46</p>
 		</div>
 		<div>
-		    <img src="/img/ann-sofie.jpg">
+		    <img src="img/ann-sofie.jpg">
 			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
 			Bioinformatician<br>
 			<a href="mailto:ann-sofie.albrekt@amberbio.com">ann-sofie.albrekt@amberbio.com</a><br>
 			+46 (0) 761 - 88 01 42</p>
+		</div>
 		</div>
 	</section>
 
