--- a/app-public/index.html
+++ b/app-public/index.html
@@ -113,24 +113,46 @@ A description of the features of the app can be found on <a href="features">Feat
 
 	<section id="about" class="columns">
 		<h1>About us</h1>
-		<p>Amberbio is owned by Amber Biosciences AB from Lund, Sweden.</p>
 		<div>
-			<h2>What we do</h2>
+			<h2>Amberbio app</h2>
 			<div>
-				We have developed our own web survey software. We can customize surveys to any need.<br><br>Feel free to contact us to discuss your needs.
+				Amber biosciences has developed the Amberbio app for analysis and visualization of data sets.
+			</div>
+		</div>
+		<div>
+			<h2>Bioinformatics consulting</h2>
+			<div>
+				Amber biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
+				Amber biosciences was founded in 2008 as a bioinformarics consulting company by reseachers from Lund University.
+			</div>
+		</div>
+		<div>
+			<h2>Writeurl</h2>
+			<div>
+				Amber biosciences has developed writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
+				Writeurl is available at <a href="http://www.writeurl.com">writeurl</a>.
+			</div>
+		</div>
+		<div>
+			<h2>Nosybee</h2>
+			<div>
+				Amber biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
+				Nosybee is available at <a href="http://www.nosybee.com">nosybee</a>.
 			</div>
 		</div>
 		<div>
 			<h2>Who we are</h2>
 			<div>
-				Nosy Bee has been invented and developed by Morten Krogh and Elias Moberger.<br><br>We have a background in programming, bioinformatics, physics, mathematics and statistics.
+				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt. Later, Elias Moberger joined.<br><br>
+				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
 			</div>
 		</div>
 		<div>
 			<h2>How we work</h2>
 			<div>
-				We write simple code and minimize our dependence on third party code. Our preferred technologies include Javascript, Node.js, C, Nginx, HTML5, CSS3.<br><br>
-				We create functional and clean user interfaces.
+				We work interactively with our customers and try to listen to their needs.<br><br>
+				We try to write simple code and minimize our dependence on third party code. Our preferred technologies include C, Swift, Javascript, Node.js, Nginx, HTML5, CSS3.<br><br>
+				We strive to create functional and clean user interfaces.
 			</div>
 		</div>
 	</section>
