--- a/app-public/index.html
+++ b/app-public/index.html
@@ -105,6 +105,18 @@ A description of the features of the app can be found on <a href="features">Feat
 		<p class="tagline">There are no user names and logins.</p>
 	</section>
 
+	<section id="feedback">
+		<h1>Feedback</h1>
+		<p class="tagline">We welcome all feedback.</p>
+		<p class="tagline">We can more efficiently improve the Amberbio app if we get feedback.</p>
+		<p class="tagline">Feedback can be sent by email to <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
+		<p class="tagline">Feedback and questions can also be sent to Twitter
+
+<a href="https://twitter.com/intent/tweet?button_hashtag=amberbio" class="twitter-hashtag-button" data-size="large">Tweet #amberbio</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+	.</p>
+	</section>
 
 
 
@@ -156,15 +168,6 @@ A description of the features of the app can be found on <a href="features">Feat
 			</div>
 		</div>
 	</section>
-
-
-
-
-
-
-
-
-
 	<section id="contact">
 		<h1>Contact</h1>
 		<div class="address">
@@ -173,21 +176,21 @@ A description of the features of the app can be found on <a href="features">Feat
 			226 57 Lund<br>
 			Sweden</p>
 			<p>Org. no.: 556755-7763</p>
-			<p><a href="mailto:info@nosybee.com">info@amberbio.com</a></p>
+			<p><a href="mailto:info@amberbio.com">info@amberbio.com</a></p>
 		</div>
 		<div class="columns">
 		<div>
 		    <img src="img/morten.jpg">
 			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
 			CEO, Bioinformatician, Developer<br>
-			<a href="mailto:morten.krogh@nosybee.com">morten.krogh@amberbio.com</a><br>
+			<a href="mailto:morten.krogh@amberbio.com">morten.krogh@amberbio.com</a><br>
 			+46 (0) 761 - 88 01 43</p>
 		</div>
 		<div>
 		    <img src="img/elias.jpg">
 			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
 			Project Manager, Developer<br>
-			<a href="mailto:elias.moberger@nosybee.com">elias.moberger@amberbio.com</a><br>
+			<a href="mailto:elias.moberger@amberbio.com">elias.moberger@amberbio.com</a><br>
 			+46 (0) 704 - 68 06 46</p>
 		</div>
 		<div>
