--- a/app-public/index.html
+++ b/app-public/index.html
@@ -104,7 +104,11 @@ A description of the features of the app can be found on <a href="features">Feat
 		<p class="tagline">All analysis is performed locally on the device.</p>
 		<p class="tagline">There are no user names and logins.</p>
 	</section>
-
+	<section>
+		<h1>Support</h1>
+		<p class="tagline">We offer support and help with the app.</p>
+		<p class="tagline">Ask for support at <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
+	</section>
 	<section id="feedback">
 		<h1>Feedback</h1>
 		<p class="tagline">We welcome all feedback.</p>
