--- a/app-public/index.html
+++ b/app-public/index.html
@@ -45,56 +45,81 @@ Available n the app store.
 	</section>
 
 	<section>
-		<h1>Description</h1>
-		<p class="tagline">
+		<h1>Features</h1>
+		<div class="service">
+			<h2>Mobile data analysis</h2>
+			The Amberbio app performs all calculations and visualization on the mobile device. The data is always available and can be visualized and analyzed in real time during meetings for example.
+		</div>
 
-<h2>Data analysis using mobile devices</h2>
-<p>
-The Amberbio app keeps data sets and peforms calculations and visualization on the devices.
-This mobility it possible to look at the data at any time and place. The data can be visualized and analyzed in real time 
-during meetings.
-</p>
+		<div class="service">
+			<h2>Types of data</h2>
+			Data sets consist of samples, molecules, and measurements for each molecule-sample pair. Missing values are allowed. Various types of data can be analyzed in the app such as mRNA gene expression, protein abundances, or microRNA abundance. Even data sets of a non-biological origin can be used.
+		</div>
+		
+		<div class="service">
+			<h2>Experimental origin of data</h2>
+			Data from any experimental origin can be analyzed including microarrays, sequencing, qPCR, mass spectrometry, and 2D gels. 
+		</div>
 
-<h2>Data sets</h2>
-<p>
-The data sets must consist of samples and molecules, and a measurment for each mlecule on each sample. Missing values are allowed.
-Many types of data fit this description. Examples of data sets are mRNA gene expression, protein abundances, microRNA abundance.
-Meaurement techniques include microarrays, sequencing, qPCR, mass spectrometry, and 2D gels.
-</p>
+		<div class="service">
+			<h2>Simple user interface</h2>
+			The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button which provides some additional information if anything might be unclear.
+		</div>
 
-<p>
-Even data sets of a non-biological origin can be used.
-</p>
+		<div class="service">
+			<h2>Import</h2>
+			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as Icloud, Dropbox or Box.
+		</div>
 
-<h2>Simple user interface</h2>
-The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button 
-which provides some additional information if anything might be unclear.
+		<div class="service">
+			<h2>Export</h2>
+			Tables and figures can be exported by email or through cloud storage providers. The simple export methods make it easy to view figures on a large screen if needed.
+		</div>
 
-</p>
-<h2>Import and export</h2>
-<p>
-New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such 
-as Icloud, Dropbox or Box. Result files can be exported through email or cloud storage providers.
-</p>
+		<div class="service">
+			<h2>Backup</h2>
+			Projects can be exported to a database file that can be used for backup and transfer to other devices. The database files make it easy to transfer data to collaborators.
+		</div>
 
-<p>
-Projects can be exported to a file that can be used for backup and transfer to other devices.
-</p>
+		<div class="service">
+			<h2>Statistical tests</h2>
+			The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, and linear regression.
+		</div>
+	
+		<div class="service">
+			<h2>Visualizations</h2>
+			The data can be visualized in various ways giving the user a better understanding of the data.
+		</div>
+	
+		<div class="service">
+			<h2>Unsupervised classification</h2>
+ 			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heatmaps. Various options can be chosen interactrively.
+		</div>
 
-<h2>Features</h2>
-<p>
-The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, linear regression, various visualizations, 2D and 3D principal component analysis, hierrchical clustering, heatmaps, logarithm transformation, normalization, factor elimination, factor association tables, produce missing value plots among others.
-</p>
+		<div class="service">
+			<h2>Creation of new data sets</h2>
+			The app can produce new derived data sets by normalization, logarithmic transformation, sample removel, molecule removal, or selection of molecules from a table.
+		</div>
+		
+		<div class="service">
+			<h2>Missing values</h2>
+			The app contains histograms of missing values for the samples. The histograms can be ordered in various ways.
+		</div>
 
-<p>
-Figures can be customized, and colors can be chosen. Figures can be exported to pdf or png. Tables can be exported to txt files.
-</p>
+		<div class="service">
+			<h2>Figures</h2>
+			The app can produce various customizable color figures. The figures can be exported to either pdf or png files.
+		</div>
 
-<p>
-A description of the features of the app can be found on <a href="features">Features</a>.
-</p>
-
-</div>
+		<div class="service">
+			<h2>Tables</h2>
+			The app can display tables of molecules. Tables can be sorted, searched, and exported to txt files.
+		</div>
+		
+		<div class="service">
+			<h2>Screen shots</h2>
+			Screen shots of the app showing the above metioned features among others can be found on <a href="screen-shots.html">screen shots</a>.
+		</div>
 	</section>
 
 	<section>
