--- a/app-public/index.html
+++ b/app-public/index.html
@@ -17,8 +17,30 @@
 
 <body>
 <header id="home" class="header">
-	<img src="img/heatmap-76@2x.png" alt="Amberbio app icon" width ="1%" />
-	<h1><a href="/">Amberbio</a></h1>
+
+	<svg viewBox="0 0 1024 1024">
+
+		<line x1="300" y1="100" x2="700" y2="100" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="300" y1="100" x2="300" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="200" y1="300" x2="400" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="200" y1="300" x2="200" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="400" y1="300" x2="400" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="700" y1="100" x2="700" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="600" y1="300" x2="800" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="600" y1="300" x2="600" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="800" y1="300" x2="800" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+
+		<rect x="100" y="500" width="200" height="200" style="fill:rgb(215,25,28);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="100" y="700" width="200" height="200" style="fill:rgb(26,150,65);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="300" y="500" width="200" height="200" style="fill:rgb(253,174,97);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="300" y="700" width="200" height="200" style="fill:rgb(166,217,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="500" y="500" width="200" height="200" style="fill:rgb(166,217,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="500" y="700" width="200" height="200" style="fill:rgb(253,174,97);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="700" y="500" width="200" height="200" style="fill:rgb(26,150,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="700" y="700" width="200" height="200" style="fill:rgb(215,25,28);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+	</svg>
+
+	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
 		<a href="#features">Features</a>
 		<a href="/screen-shoots">Screen shots</a>
