--- a/app-public/index.html
+++ b/app-public/index.html
@@ -18,6 +18,7 @@
 <body>
 <header id="home" class="header">
 
+  <a href="index.html">
 	<svg viewBox="0 0 1024 1024">
 
 		<line x1="300" y1="100" x2="700" y2="100" style="stroke:rgb(0,0,0);stroke-width:10" />	
@@ -39,6 +40,7 @@
 		<rect x="700" y="500" width="200" height="200" style="fill:rgb(26,150,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
 		<rect x="700" y="700" width="200" height="200" style="fill:rgb(215,25,28);stroke-width:0;stroke:rgb(0,0,0)"></rect>
 	</svg>
+  </a>
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
