--- a/app-public/index.html
+++ b/app-public/index.html
@@ -53,6 +53,8 @@
 		<a href="#about">About us</a>
 		<a href="#contact">Contact</a>
 	</nav>
+	
+	<div style="clear: both; height : 0px;"></div>
 </header>
 
 <article>
@@ -70,77 +72,77 @@ Available n the app store.
 
 	<section id="features">
 		<h1>Features</h1>
-		<div class="service">
+		<div class="column">
 			<h2>Mobile data analysis</h2>
 			The Amberbio app performs all calculations and visualization on the mobile device. The data is always available and can be visualized and analyzed in real time during meetings for example.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Types of data</h2>
 			Data sets consist of samples, molecules, and measurements for each molecule-sample pair. Missing values are allowed. Various types of data can be analyzed in the app such as mRNA gene expression, protein abundances, or microRNA abundance. Even data sets of a non-biological origin can be used.
 		</div>
 		
-		<div class="service">
+		<div class="column">
 			<h2>Experimental origin of data</h2>
 			Data from any experimental origin can be analyzed including microarrays, sequencing, qPCR, mass spectrometry, and 2D gels. 
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Simple user interface</h2>
 			The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button which provides some additional information if anything might be unclear.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Import</h2>
 			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as Icloud, Dropbox or Box.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Export</h2>
 			Tables and figures can be exported by email or through cloud storage providers. The simple export methods make it easy to view figures on a large screen if needed.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Backup</h2>
 			Projects can be exported to a database file that can be used for backup and transfer to other devices. The database files make it easy to transfer data to collaborators.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Statistical tests</h2>
 			The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, and linear regression.
 		</div>
 	
-		<div class="service">
+		<div class="column">
 			<h2>Visualizations</h2>
 			The data can be visualized in various ways giving the user a better understanding of the data.
 		</div>
 	
-		<div class="service">
+		<div class="column">
 			<h2>Unsupervised classification</h2>
  			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heatmaps. Various options can be chosen interactrively.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Creation of new data sets</h2>
 			The app can produce new derived data sets by normalization, logarithmic transformation, sample removel, molecule removal, or selection of molecules from a table.
 		</div>
 		
-		<div class="service">
+		<div class="column">
 			<h2>Missing values</h2>
 			The app contains histograms of missing values for the samples. The histograms can be ordered in various ways.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Figures</h2>
 			The app can produce various customizable color figures. The figures can be exported to either pdf or png files.
 		</div>
 
-		<div class="service">
+		<div class="column">
 			<h2>Tables</h2>
 			The app can display tables of molecules. Tables can be sorted, searched, and exported to txt files.
 		</div>
 		
-		<div class="service">
+		<div class="column">
 			<h2>Screen shots</h2>
 			Screen shots of the app showing the above metioned features among others can be found on <a href="screen-shots.html">screen shots</a>.
 		</div>
@@ -171,48 +173,44 @@ Available n the app store.
 	.</p>
 	</section>
 
-
-
-
-
-
-	<section id="about" class="columns">
+	<section id="about">
+	  
 		<h1>About us</h1>
-		<div>
+		<div class="column">
 			<h2>Amberbio app</h2>
 			<div>
 				Amber biosciences has developed the Amberbio app for analysis and visualization of data sets.
 			</div>
 		</div>
-		<div>
+		<div class="column">
 			<h2>Bioinformatics consulting</h2>
 			<div>
 				Amber biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
 				Amber biosciences was founded in 2008 as a bioinformarics consulting company by reseachers from Lund University.
 			</div>
 		</div>
-		<div>
+		<div class="column">
 			<h2>Writeurl</h2>
 			<div>
 				Amber biosciences has developed writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
 				Writeurl is available at <a href="http://www.writeurl.com">writeurl</a>.
 			</div>
 		</div>
-		<div>
+		<div class="column">
 			<h2>Nosybee</h2>
 			<div>
 				Amber biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
 				Nosybee is available at <a href="http://www.nosybee.com">nosybee</a>.
 			</div>
 		</div>
-		<div>
+		<div class="column">
 			<h2>Who we are</h2>
 			<div>
 				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt. Later, Elias Moberger joined.<br><br>
 				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
 			</div>
 		</div>
-		<div>
+		<div class="column">
 			<h2>How we work</h2>
 			<div>
 				We work interactively with our customers and try to listen to their needs.<br><br>
@@ -221,6 +219,7 @@ Available n the app store.
 			</div>
 		</div>
 	</section>
+
 	<section id="contact">
 		<h1>Contact</h1>
 		<div class="address">
@@ -231,22 +230,22 @@ Available n the app store.
 			<p>Org. no.: 556755-7763</p>
 			<p><a href="mailto:info@amberbio.com">info@amberbio.com</a></p>
 		</div>
-		<div class="columns">
 		<div>
+		<div class="column">
 		    <img src="img/morten.jpg">
 			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
 			CEO, Bioinformatician, Developer<br>
 			<a href="mailto:morten.krogh@amberbio.com">morten.krogh@amberbio.com</a><br>
 			+46 (0) 761 - 88 01 43</p>
 		</div>
-		<div>
+		<div class="column">
 		    <img src="img/elias.jpg">
 			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
 			Project Manager, Developer<br>
 			<a href="mailto:elias.moberger@amberbio.com">elias.moberger@amberbio.com</a><br>
 			+46 (0) 704 - 68 06 46</p>
 		</div>
-		<div>
+		<div class="column">
 		    <img src="img/ann-sofie.jpg">
 			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
 			Bioinformatician<br>
