--- a/app-public/index.html
+++ b/app-public/index.html
@@ -165,12 +165,6 @@ Available n the app store.
 		<p class="tagline">We welcome all feedback.</p>
 		<p class="tagline">We can more efficiently improve the Amberbio app if we get feedback.</p>
 		<p class="tagline">Feedback can be sent by email to <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
-		<p class="tagline">Feedback and questions can also be sent to Twitter
-
-<a href="https://twitter.com/intent/tweet?button_hashtag=amberbio" class="twitter-hashtag-button" data-size="large">Tweet #amberbio</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-	.</p>
 	</section>
 
 	<section id="about">
@@ -232,21 +226,21 @@ Available n the app store.
 		</div>
 		<div>
 		<div class="column">
-		    <img src="img/morten.jpg">
+		    <img src="img/morten.jpg" alt="photo of Morten Krogh">
 			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
 			CEO, Bioinformatician, Developer<br>
 			<a href="mailto:morten.krogh@amberbio.com">morten.krogh@amberbio.com</a><br>
 			+46 (0) 761 - 88 01 43</p>
 		</div>
 		<div class="column">
-		    <img src="img/elias.jpg">
+		    <img src="img/elias.jpg" alt="photo of Elias Moberger">
 			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
 			Project Manager, Developer<br>
 			<a href="mailto:elias.moberger@amberbio.com">elias.moberger@amberbio.com</a><br>
 			+46 (0) 704 - 68 06 46</p>
 		</div>
 		<div class="column">
-		    <img src="img/ann-sofie.jpg">
+		    <img src="img/ann-sofie.jpg" alt="photo of Ann-Sofie Albrekt" class="person-photo">
 			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
 			Bioinformatician<br>
 			<a href="mailto:ann-sofie.albrekt@amberbio.com">ann-sofie.albrekt@amberbio.com</a><br>
