--- a/app-public/index.html
+++ b/app-public/index.html
@@ -208,7 +208,7 @@ Available n the app store.
 			<h2>How we work</h2>
 			<div>
 				We work interactively with our customers and try to listen to their needs.<br><br>
-				We try to write simple code and minimize our dependence on third party code. Our preferred technologies include C, Swift, Javascript, Node.js, Nginx, HTML5, CSS3.<br><br>
+				We try to write simple code and minimize our dependence on third party code. Our preferred technologies include C, R, Swift, Javascript, Node.js, Nginx, HTML5, CSS3.<br><br>
 				We strive to create functional and clean user interfaces.
 			</div>
 		</div>
