--- a/app-public/consulting.html
+++ b/app-public/consulting.html
@@ -44,14 +44,14 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="#features">Features</a>
+		<a href="index.html#features">Features</a>
 		<a href="/screen-shoots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="#support">Support</a>
-		<a href="#feedback">Feedback</a>
+		<a href="index.html##support">Support</a>
+		<a href="index.html#feedback">Feedback</a>
 		<a href="consulting.html">Consulting</a>
-		<a href="#about">About us</a>
-		<a href="#contact">Contact</a>
+		<a href="index.html#about">About us</a>
+		<a href="index.html#contact">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
