--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,253 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<title>Amber BioSciences - Home</title>
-<link rel="stylesheet" type="text/css" href="styles.css" />
-<script type="text/javascript" src="AmberBio20080512.js"></script>
+	<meta charset="utf-8" />
+	<meta name="description" content="Nosy Bee provides web surveys, statistical analysis och result reports.">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>Amberbio</title>
+	<link rel="shortcut icon" href="/img/favicon.png">
+	<link rel="stylesheet" href="index.css" type="text/css">
+	<script>
+	document.createElement('header');
+	document.createElement('nav');
+	document.createElement('article');
+	document.createElement('section');
+	</script>
 </head>
 
 <body>
-<div class="allcontent">
-<div class="logo">
-<a class="logo" href="index.html">
-<span class="logoA">Amber</span>
-<span class="logoB">BioSciences</span>
+<header id="home" class="header">
 
-</a>
-</div>
+  <a href="index.html">
+	<svg viewBox="0 0 1024 1024">
 
-<div class="topmenu">
-  <a class="top current" href="index.html">Home</a>
-  <a class="top" href="products.html">Products</a>
-  <a class="top" href="company.html">Company</a>
-  <a class="top" href="contact.html">Contact</a>
-</div>
-<hr class="topline" />
-<div class="right">
-<img src="front_page_picture6.png" alt="Bioinformatics image" width="90%" />
-<br/><br/>
-Bioinformatics:<br/>
-<br/>
-<i>
-The use and development of mathematical algorithms and computer programs
-to obtain insight into biological and medical systems.
-</i>
-</div>
-<div class="main">
-<h3>Amber BioSciences - a bioinformatics company</h3>
-<p>
-We provide bioinformatics and statistics consulting to biotech
-companies and university researchers.  Modern biomedical research
-requires use of statistics, mathematical algorithms and computer
-programs in the design and analysis of experiments. Every project
-  has its own distinct features that require customized design,
-work flow, software and analysis.
-</p>
-<p>
-We collaborate closely and personally with our customers, who might or might not
-  have prior bioinformatics skills.
-Examples of our services are given on the
-<a href="products.html">products</a> page.
-</p>
-<p>
-With a location in Lund, Sweden, Amber BioSciences, founded by Swedish and Danish
-  bioinformaticians, is part of the active Medicon Valley research
-community and close to biotech companies and universities in both
-Sweden and Denmark. We provide services globally in the languages
-  English, Swedish and Danish.
-</p>
-</div>
-<div class="footer">
- <span class="footerelement">&#169; Amber BioSciences</span>
- <a class="footerelement" href="index.html">www.amberbio.com</a>
- <span class="footerelement"><script type="text/javascript">general()</script></span>
-</div>
-</div>
+		<line x1="300" y1="100" x2="700" y2="100" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="300" y1="100" x2="300" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="200" y1="300" x2="400" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="200" y1="300" x2="200" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="400" y1="300" x2="400" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="700" y1="100" x2="700" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="600" y1="300" x2="800" y2="300" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="600" y1="300" x2="600" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+		<line x1="800" y1="300" x2="800" y2="500" style="stroke:rgb(0,0,0);stroke-width:10" />	
+
+		<rect x="100" y="500" width="200" height="200" style="fill:rgb(215,25,28);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="100" y="700" width="200" height="200" style="fill:rgb(26,150,65);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="300" y="500" width="200" height="200" style="fill:rgb(253,174,97);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="300" y="700" width="200" height="200" style="fill:rgb(166,217,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="500" y="500" width="200" height="200" style="fill:rgb(166,217,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="500" y="700" width="200" height="200" style="fill:rgb(253,174,97);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="700" y="500" width="200" height="200" style="fill:rgb(26,150,106);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+		<rect x="700" y="700" width="200" height="200" style="fill:rgb(215,25,28);stroke-width:0;stroke:rgb(0,0,0)"></rect>
+	</svg>
+  </a>
+
+	<a class="logo-text" href="/">Amberbio</a>
+	<nav class="header-nav">
+		<a href="index.html#features">Features</a>
+		<a href="/screen-shoots">Screen shots</a>
+		<a href="/manual">Manual</a>
+		<a href="index.html#support">Support</a>
+		<a href="#feedback">Feedback</a>
+		<a href="consulting.html">Consulting</a>
+		<a href="#about">About us</a>
+		<a href="#contact">Contact</a>
+	</nav>
+	
+	<div style="clear: both; height : 0px;"></div>
+</header>
+
+<article>
+	<section>
+		<h1>The Amberbio app for analyzing and visualizing biological data sets</h1>
+Figure of iphone with app.
+Available n the app store.
+	</section>
+
+	<section>
+		<h1>Price</h1>
+		<p class="tagline">The app is a paid app with no extra costs. Future updates are free. The app can be installed on all devices with the same Apple id.</p>
+		<p class="tagline">The price is subject to change. The current price is approximately with small country to country variations.</p>
+	</section>
+
+	<section id="features">
+		<h1>Features</h1>
+		<div class="column">
+			<h2>Mobile data analysis</h2>
+			The Amberbio app performs all calculations and visualization on the mobile device. The data is always available and can be visualized and analyzed in real time during meetings for example.
+		</div>
+
+		<div class="column">
+			<h2>Types of data</h2>
+			Data sets consist of samples, molecules, and measurements for each molecule-sample pair. Missing values are allowed. Various types of data can be analyzed in the app such as mRNA gene expression, protein abundances, or microRNA abundance. Even data sets of a non-biological origin can be used.
+		</div>
+		
+		<div class="column">
+			<h2>Experimental origin of data</h2>
+			Data from any experimental origin can be analyzed including microarrays, sequencing, qPCR, mass spectrometry, and 2D gels. 
+		</div>
+
+		<div class="column">
+			<h2>Simple user interface</h2>
+			The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button which provides some additional information if anything might be unclear.
+		</div>
+
+		<div class="column">
+			<h2>Import</h2>
+			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as Icloud, Dropbox or Box.
+		</div>
+
+		<div class="column">
+			<h2>Export</h2>
+			Tables and figures can be exported by email or through cloud storage providers. The simple export methods make it easy to view figures on a large screen if needed.
+		</div>
+
+		<div class="column">
+			<h2>Backup</h2>
+			Projects can be exported to a database file that can be used for backup and transfer to other devices. The database files make it easy to transfer data to collaborators.
+		</div>
+
+		<div class="column">
+			<h2>Statistical tests</h2>
+			The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, and linear regression.
+		</div>
+	
+		<div class="column">
+			<h2>Visualizations</h2>
+			The data can be visualized in various ways giving the user a better understanding of the data.
+		</div>
+	
+		<div class="column">
+			<h2>Unsupervised classification</h2>
+ 			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heatmaps. Various options can be chosen interactrively.
+		</div>
+
+		<div class="column">
+			<h2>Creation of new data sets</h2>
+			The app can produce new derived data sets by normalization, logarithmic transformation, sample removel, molecule removal, or selection of molecules from a table.
+		</div>
+		
+		<div class="column">
+			<h2>Missing values</h2>
+			The app contains histograms of missing values for the samples. The histograms can be ordered in various ways.
+		</div>
+
+		<div class="column">
+			<h2>Figures</h2>
+			The app can produce various customizable color figures. The figures can be exported to either pdf or png files.
+		</div>
+
+		<div class="column">
+			<h2>Tables</h2>
+			The app can display tables of molecules. Tables can be sorted, searched, and exported to txt files.
+		</div>
+		
+		<div class="column">
+			<h2>Screen shots</h2>
+			Screen shots of the app showing the above metioned features among others can be found on <a href="screen-shots.html">screen shots</a>.
+		</div>
+	</section>
+
+	<section id="privacy">
+		<h1>Privacy</h1>
+		<p class="tagline">The Amberbio app respects user privacy.</p>  
+		<p class="tagline">No data is sent to  server.</p>
+		<p class="tagline">All analysis is performed locally on the device.</p>
+		<p class="tagline">There are no user names and logins.</p>
+	</section>
+	<section id="support">
+		<h1>Support</h1>
+		<p class="tagline">We offer support and help with the app.</p>
+		<p class="tagline">Ask for support at <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
+	</section>
+	<section id="feedback">
+		<h1>Feedback</h1>
+		<p class="tagline">We welcome all feedback.</p>
+		<p class="tagline">We can more efficiently improve the Amberbio app if we get feedback.</p>
+		<p class="tagline">Feedback can be sent by email to <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
+	</section>
+
+	<section id="about">
+	  
+		<h1>About us</h1>
+		<div class="column">
+			<h2>Amberbio app</h2>
+			<div>
+				Amber biosciences has developed the Amberbio app for analysis and visualization of data sets.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Bioinformatics consulting</h2>
+			<div>
+				Amber biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
+				Amber biosciences was founded in 2008 as a bioinformarics consulting company by reseachers from Lund University.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Writeurl</h2>
+			<div>
+				Amber biosciences has developed writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
+				Writeurl is available at <a href="http://www.writeurl.com">writeurl</a>.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Nosybee</h2>
+			<div>
+				Amber biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
+				Nosybee is available at <a href="http://www.nosybee.com">nosybee</a>.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Who we are</h2>
+			<div>
+				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt. Later, Elias Moberger joined.<br><br>
+				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
+			</div>
+		</div>
+		<div class="column">
+			<h2>How we work</h2>
+			<div>
+				We work interactively with our customers and try to listen to their needs.<br><br>
+				We try to write simple code and minimize our dependence on third party code. Our preferred technologies include C, R, Swift, Javascript, Node.js, Nginx, HTML5, CSS3.<br><br>
+				We strive to create functional and clean user interfaces.
+			</div>
+		</div>
+	</section>
+
+	<section id="contact">
+		<h1>Contact</h1>
+		<div class="address">
+			<p>Amber Biosciences AB</p>
+			<p>Skrivarevägen 9<br>
+			226 57 Lund<br>
+			Sweden</p>
+			<p>Org. no.: 556755-7763</p>
+			<p><a href="mailto:info@amberbio.com">info@amberbio.com</a></p>
+		</div>
+		<div>
+		<div class="column">
+		    <img src="img/morten.jpg" alt="photo of Morten Krogh">
+			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
+			CEO, Bioinformatician, Developer<br>
+			<a href="mailto:morten.krogh@amberbio.com">morten.krogh@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 43</p>
+		</div>
+		<div class="column">
+		    <img src="img/elias.jpg" alt="photo of Elias Moberger">
+			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
+			Project Manager, Developer<br>
+			<a href="mailto:elias.moberger@amberbio.com">elias.moberger@amberbio.com</a><br>
+			+46 (0) 704 - 68 06 46</p>
+		</div>
+		<div class="column">
+		    <img src="img/ann-sofie.jpg" alt="photo of Ann-Sofie Albrekt" class="person-photo">
+			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
+			Bioinformatician<br>
+			<a href="mailto:ann-sofie.albrekt@amberbio.com">ann-sofie.albrekt@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 42</p>
+		</div>
+		</div>
+	</section>
+</article>
 </body>
 </html>
