--- a/public/consulting.html
+++ b/public/consulting.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Amberbio</title>
 	<link rel="shortcut icon" href="/img/favicon.png">
-	<link rel="stylesheet" href="index.css" type="text/css">
+	<link rel="stylesheet" href="css/index.css" type="text/css">
 	<script>
 	document.createElement('header');
 	document.createElement('nav');
@@ -18,7 +18,7 @@
 <body>
 <header id="home" class="header">
 
-  <a href="index.html">
+  <a href="/">
 	<svg viewBox="0 0 1024 1024">
 
 		<line x1="300" y1="100" x2="700" y2="100" style="stroke:rgb(0,0,0);stroke-width:10" />	
@@ -44,14 +44,14 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="index.html#features">Features</a>
+		<a href="/#features">Features</a>
 		<a href="/screen-shoots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="index.html##support">Support</a>
-		<a href="index.html#feedback">Feedback</a>
+		<a href="/#support">Support</a>
+		<a href="/#feedback">Feedback</a>
 		<a href="consulting.html">Consulting</a>
-		<a href="index.html#about">About us</a>
-		<a href="index.html#contact">Contact</a>
+		<a href="/#about">About us</a>
+		<a href="/#contact">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
