--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
-		<a href="consulting.html">Consulting</a>
+		<a href="/consulting">Consulting</a>
 		<a href="/#about">About us</a>
 		<a href="/#contact">Contact</a>
 	</nav>
@@ -59,7 +59,7 @@
 
 <article>
 	<section>
-		<h1>The Amberbio app for analyzing and visualizing biological data sets</h1>
+		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
 Figure of iphone with app.
 Available n the app store.
 	</section>
