--- a/public/missing-page.html
+++ b/public/missing-page.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Amberbio</title>
 	<link rel="shortcut icon" href="/img/favicon.png">
-	<link rel="stylesheet" href="css/index.css" type="text/css">
+	<link rel="stylesheet" href="/css/index.css" type="text/css">
 	<script>
 	document.createElement('header');
 	document.createElement('nav');
@@ -49,7 +49,7 @@
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
-		<a href="consulting.html">Consulting</a>
+		<a href="/consulting.html">Consulting</a>
 		<a href="/#about">About us</a>
 		<a href="/#contact">Contact</a>
 	</nav>
