--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@ Available n the app store.
 		
 		<div class="column">
 			<h2>Screen shots</h2>
-			Screen shots of the app showing the above metioned features among others can be found on <a href="screen-shots.html">screen shots</a>.
+			Screen shots of the app showing the above metioned features among others can be found on <a href="/screen-shots">screen shots</a>.
 		</div>
 	</section>
 
