--- a/public/missing-page.html
+++ b/public/missing-page.html
@@ -49,7 +49,7 @@
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
-		<a href="/consulting.html">Consulting</a>
+		<a href="/consulting">Consulting</a>
 		<a href="/#about">About us</a>
 		<a href="/#contact">Contact</a>
 	</nav>
